Updated raspbian install for docker and separated docker installation into task fiels based on distributions,

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,9 @@
-- hosts: valheim
+- hosts: pihole
   gather_facts: true
   become: true  # run as superuser/root
   roles:
-    - packages
+    - bootstrap
     - docker
-    # - pihole
+    - pihole
+    # - dnscrypt
     # - harden
