--- a/inventory.yml
+++ b/inventory.yml
@@ -1,9 +1,9 @@
-valheim:
+pihole:
   # Host configuration variables documented at
   # https://docs.ansible.com/ansible/latest/user_guide/intro_inventory.html#connecting-to-hosts-behavioral-inventory-parameters
   hosts:
     server:
       ansible_connection: ssh
-      ansible_user: root
+      ansible_user: '{{ lookup("env", "PIHOLE_USER") }}'
       ansible_host: '{{ lookup("env", "SERVER_IPv4_ADDRESS") }}'
       ansible_ssh_private_key_file: '{{ lookup("env", "SERVER_SSH_KEY_FILE") }}'
