--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,31 +1,11 @@
 ---
 # tasks file for docker
-## Install Docker
-- name: Add Docker GPG apt key
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
+# https://docs.ansible.com/ansible/latest/user_guide/playbooks_conditionals.html#commonly-used-facts
 
-- name: Add Docker Repository
-  ansible.builtin.shell: echo "deb [arch=$(dpkg --print-architecture)] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+- name: Install docker, conditional debian distro 
+  ansible.builtin.include_tasks: debian.yml
+  when: ansible_facts['os_family'] == "Ubuntu"
 
-# Run apt update to update repo lists used for installing packages
-- name: Run "apt-get update"
-  ansible.builtin.apt:
-    update_cache: yes
-
-- name: Install docker from repository
-  ansible.builtin.apt:
-    name: docker-ce
-    state: latest
-
-- name: Enable and start Docker systemd service
-  ansible.builtin.shell: |
-    sudo systemctl enable docker.service
-    sudo systemctl start docker.service
-
-## Install docker-compose
-- name: Downloading binary for docker-compose 
-  ansible.builtin.shell: |
-    curl -SL https://github.com/docker/compose/releases/download/v2.7.0/docker-compose-linux-x86_64 -o /usr/bin/docker-compose
-    chmod +x /usr/bin/docker-compose 
+- name: Install docker, conditional debian distro 
+  ansible.builtin.include_tasks: debian.yml
+  when: ansible_facts['os_family'] == "Debian"
