Cleaned up pihole role and fixed non-ubuntu debian role for docker installation.

--- a/roles/bootstrap/tasks/main.yml
+++ b/roles/bootstrap/tasks/main.yml
@@ -29,6 +29,8 @@
       - ca-certificates
       - apt-transport-https
       - curl
+      - gnupg
+      - lsb-release
       - dnsutils
       - raspberrypi-kernel
       - raspberrypi-kernel-headers
