--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -3,7 +3,7 @@
 # https://docs.ansible.com/ansible/latest/user_guide/playbooks_conditionals.html#commonly-used-facts
 
 - name: Install docker, conditional debian distro 
-  ansible.builtin.include_tasks: debian.yml
+  ansible.builtin.include_tasks: ubuntu.yml
   when: ansible_facts['os_family'] == "Ubuntu"
 
 - name: Install docker, conditional debian distro 
