--- a/roles/pihole/tasks/main.yml
+++ b/roles/pihole/tasks/main.yml
@@ -1,9 +1,6 @@
 ---
 # tasks file for pihole
 
-# TODO
-# Disable || configure resolvconf   (raspbian default DNS)
-
 - name: Create dirs for dns services files
   ansible.builtin.shell: |
     mkdir -p /opt/dns
@@ -11,23 +8,15 @@
     mkdir -p /opt/dns/config/etc-pihole
     mkdir -p /opt/dns/config/etc-dnscrypt
 
-- name: Add PiHole as the (only) static DNS server on the Pi
-  ansible.builtin.shell: |
-    echo "static domain_name_servers=127.0.0.1" >> /etc/dhcpcd.conf
-    sudo service dhcpcd restart
-  # (Validate) check the regenerated /etc/resolv.conf file
-
 - name: Process env_file for pihole
   ansible.builtin.template:
     src: templates/pihole.env.j2
     dest: /opt/dns/config/pihole.env
     mode: '0755'
 
-- name: Process docker-compose.yml file for pihole server
-  ansible.builtin.template:
-    src: templates/docker-compose.yml.j2
-    dest: /opt/dns/docker-compose.yml
-    mode: '0755'
+# Process docker-compose services config files
+- name: Process docker-compose services config files
+  ansible.builtin.include_tasks: services.yml
 
 - name: Install dns.service unit file
   ansible.builtin.template:
@@ -40,9 +29,14 @@
     sudo systemctl enable dns.service
     sudo systemctl start dns.service
 
-- name: Include and run systemd-resolved configuration tasks
-  ansible.builtin.include_tasks: configure_systemd.yml
+# - name: Include and run systemd-resolved configuration tasks
+#   ansible.builtin.include_tasks: configure_systemd.yml
 
+# - name: Add PiHole as the (only) static DNS server on the Pi
+#   ansible.builtin.shell: |
+#     echo "static domain_name_servers=127.0.0.1" >> /etc/dhcpcd.conf
+#     sudo service dhcpcd restart
+#   # (Validate) check the regenerated /etc/resolv.conf file
 
 # TEST
 #   name resolution should show resolving @ 127.0.0.1
