Updated env example file

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,11 @@ DNSSEC_ENABLED=false
 DNSCRYPT_ENABLED=false
 APT_TRANSPORT_TOR_ENABLED=false
 PIHOLE_WEB_ADMIN_PASS="supersecretpassword"
+
+# comma-separated list of DNS servers to use for dnscrypt-proxy
+# https://dnscrypt.info/public-servers
+DNSCRYPT_SERVER_NAMES="'dnscrypt.pl'"
+
+# Anonymized DNS relays
+# https://github.com/DNSCrypt/dnscrypt-proxy/wiki/Anonymized-DNS
+ANONYMIZED_DNS_RELAYS="'sdns://gRMxNzQuMTM4LjI5LjE3NToxNDQz'"
