Adding post install tasks to pihole role for configuring pihole host to use pihole as its own DNS, helping to prevent fallbacks or leaks.

--- a/playbook.yml
+++ b/playbook.yml
@@ -3,8 +3,9 @@
   become: true  # run as superuser/root
   roles:
     # - debug
-    - bootstrap
-    - docker
-    - pihole
-    - dnscrypt
+    # - bootstrap
+    # - docker
+    # - pihole
+    # - dnscrypt
+    - systemd_resolved
     # - harden
