--- a/roles/pihole/tasks/services.yml
+++ b/roles/pihole/tasks/services.yml
@@ -1,4 +1,12 @@
 ---
+
+# klutchell/dnscrypt-proxy requires DOCKER_BUILDKIT
+- name: Enable DOCKER_BUILDKIT for docker and docker-compose on PiHole hosts
+  ansible.builtin.shell: |
+    echo "export DOCKER_BUILDKIT=1" >> $HOME/.bashrc
+    echo "export COMPOSE_DOCKER_CLI_BUILD=1" >> $HOME/.bashrc
+    source $HOME/.bashrc
+
 - name: Process docker-compose.yml file for pihole server
   ansible.builtin.template:
     src: templates/docker-compose.yml.j2
