--- a/roles/post_install/tasks/main.yml
+++ b/roles/post_install/tasks/main.yml
@@ -8,11 +8,6 @@
 # which means we don't want to configure dnsmasq separately,
 # which used to be an old workaround for this.
 
-- name: Configure pihole host to use pihole for all DNS resolution
-  become: true
-  ansible.builtin.shell: |
-    echo "static domain_name_servers=127.0.0.1" >> /etc/dhcpcd.conf
-
 # - name: Set static IP address for PiHole host
 #   become: true
 #   ansible.builtin.shell: |
@@ -27,6 +22,11 @@
   ansible.builtin.shell: |
     sudo systemctl enable dns.service
     sudo systemctl start dns.service
+
+#- name: Configure pihole host to use pihole for all DNS resolution
+#  become: true
+#  ansible.builtin.shell: |
+#    echo "static domain_name_servers=127.0.0.1" >> /etc/dhcpcd.conf
 
 - name: Reboot pihole host
   ansible.builtin.reboot:
