Fixed pihole break issue with the docker install which prevented the web admin page from loading. Cleaned up other tasks. Worked around docker pi hole issue 593 by adding privileged true to pihole compose config, not ideal but apparently resolves the issue until it can be fixed.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-TIMEZONE="America/Los_Angeles"
+TIMEZONE="America/Chicago"
 SERVER_IPv4_ADDRESS="192.168.1.53"
 SERVER_SSH_KEY_FILE="/home/crayons/.ssh/pihole"
 PIHOLE_USER="pi"
@@ -7,6 +7,7 @@ DNSSEC_ENABLED=false
 DNSCRYPT_ENABLED=false
 APT_TRANSPORT_TOR_ENABLED=false
 PIHOLE_WEB_ADMIN_PASS="supersecretpassword"
+LOCALE="en_US.UTF-8"
 
 # comma-separated list of DNS servers to use for dnscrypt-proxy
 # https://dnscrypt.info/public-servers
