--- a/roles/bootstrap/tasks/main.yml
+++ b/roles/bootstrap/tasks/main.yml
@@ -5,6 +5,13 @@
     update_cache: yes
   ignore_errors: true
 
+- name: Set locale
+  become: true
+  ansible.builtin.shell: |
+    echo "en_US.UTF-8" >> /etc/locale.gen
+    locale-gen en_US.UTF-8
+    update-locale en_US.UTF-8
+
 # - name: Conditionally enable apt-transport-tor for sources.list.d/raspi.list
 #   ansible.builtin.template:
 #     src: templates/etc-apt/raspi.list.j2
@@ -23,7 +30,6 @@
   ansible.builtin.apt:
     pkg:
       - python3
-      - python3-dev
       - python3-pip
       - software-properties-common
       - ca-certificates
