--- a/roles/pihole/tasks/main.yml
+++ b/roles/pihole/tasks/main.yml
@@ -8,6 +8,7 @@
     mkdir -p /opt/dns
     mkdir -p /opt/dns/config
     mkdir -p /opt/dns/config/etc-pihole
+    mkdir -p /opt/dns/config/etc-dnsmasq.d
     chmod -R 755 /opt/dns
 
 - name: Process env_file for pihole
