--- a/roles/post_install/tasks/main.yml
+++ b/roles/post_install/tasks/main.yml
@@ -15,21 +15,29 @@
 #     echo "static ip_address=192.168.1.53/24" >> /etc/dhcpcd.conf
 #     echo "static routers=192.168.1.1" >> /etc/dhcpcd.conf
 
-# TODO
-# Is it best practice to disable systemd resolved? Will the machine use its own
-# pihole after being setup? (resolve port 53 bind conflict)
-- name: Enable and start the dockerized dns service
-  ansible.builtin.shell: | 
-    sudo systemctl enable --now dns.service
-    sudo systemctl start dns.service
-
 #- name: Configure pihole host to use pihole for all DNS resolution
 #  become: true
 #  ansible.builtin.shell: |
 #    echo "static domain_name_servers=127.0.0.1" >> /etc/dhcpcd.conf
 
+# NOTE: dnsmasq is now built into PiHole's FTL, and so during pihole 
+# run it creates /etc/dnsmasq/ files. Therefore, we still apply
+# dnsmasq changes for configurations such as DNSSEC as before but
+# we don't otherwise configure dnsmasq outside of pihole.
+# https://github.com/pi-hole/pi-hole/wiki/DNSCrypt-2.0#dnssec-validation
+- name: IF DNSSEC is enabled in pihole, and dnscrypt is enabled, also enable DNSSEC in the dnscrypt "proxy-dnssec"
+  ansible.builtin.shell: |
+    touch /opt/dns/config/etc-dnsmasq.d/02-dnscrypt.conf
+    echo "proxy-dnssec" >> /opt/dns/config/etc-dnsmasq.d/02-dnscrypt.conf
+  ignore_errors: true
+
 - name: Reboot pihole host
   ansible.builtin.reboot:
+
+- name: Enable and start the dockerized dns service
+  ansible.builtin.shell: | 
+    sudo systemctl enable dns.service
+    sudo systemctl start dns.service
 
 # #########################
 
