Fixed permissions issue for docker volume dirs. Added dhcpcd config lines for setting a static IP and setting the pihole host to use the pihole as its DNS server to help prevent DNS leaks.

--- a/playbook.yml
+++ b/playbook.yml
@@ -3,9 +3,9 @@
   become: true  # run as superuser/root
   roles:
     # - debug
-    - bootstrap
-    - docker
-    - pihole
-    - dnscrypt
-    - post_install
-    # - harden
+    # - bootstrap
+    # - docker
+    # - pihole
+    # - dnscrypt
+    # - post_install
+    - harden
