--- a/roles/dnscrypt/tasks/main.yml
+++ b/roles/dnscrypt/tasks/main.yml
@@ -4,7 +4,6 @@
 # https://github.com/DNSCrypt/dnscrypt-proxy/wiki
 
 # print architecture info: $uname -sm (Linux armv7l)
-
 - name: Download dnscrypt-proxy release 2.1.1
   ansible.builtin.get_url:
     url: https://github.com/DNSCrypt/dnscrypt-proxy/releases/download/2.1.1/dnscrypt-proxy-linux_arm-2.1.1.tar.gz
@@ -18,6 +17,11 @@
     rm dnscrypt-proxy-linux_arm-2.1.1.tar.gz
   args:
     chdir: /opt/dns
+
+- name: Fix permissions for dnscrypt /config bound dir  
+  become: true
+  ansible.builtin.shell: |
+    chmod -R 766 /opt/dns/dnscrypt-proxy
   
 - name: Configure dnscrypt-proxy
   ansible.builtin.template:
