Fixed prompt error with the reset and enable commands for ufw in the harden role. Fixed naming typo in ssh harden task. Set env vars to configure optional static host ip and static router ip for DHCPCD configuration on pihole host.

--- a/roles/harden/tasks/ssh.yml
+++ b/roles/harden/tasks/ssh.yml
@@ -15,7 +15,7 @@
 
 # sed -i 's/STRING_TO_REPLACE/STRING_TO_REPLACE_IT/g' filename
 
-- name: Disable Password-based access (if eapplicablenabled)
+- name: Disable Password-based access (if is enabled)
   ansible.builtin.shell: |
     sed -i 's/PasswordAuthentication yes/PasswordAuthentication no/g' /etc/ssh/sshd_config
 
