--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ DNSCRYPT_ENABLED=false
 APT_TRANSPORT_TOR_ENABLED=false
 PIHOLE_WEB_ADMIN_PASS="supersecretpassword"
 LOCALE="en_US.UTF-8"
-
+HOST_STATIC_ADDRESS="192.168.1.100"
+HOST_STATIC_ROUTER_ADDRESS="192.168.1.1"
 # comma-separated list of DNS servers to use for dnscrypt-proxy
 # https://dnscrypt.info/public-servers
 DNSCRYPT_SERVER_NAMES="'dnscrypt.pl'"
