--- a/playbook.yml
+++ b/playbook.yml
@@ -3,9 +3,9 @@
   become: true  # run as superuser/root
   roles:
     # - debug
-    # - bootstrap
-    # - docker
-    # - pihole
-    # - dnscrypt
-    # - post_install
+    - bootstrap
+    - docker
+    - pihole
+    - dnscrypt
+    - post_install
     - harden
