--- a/roles/harden/tasks/sysctl.yml
+++ b/roles/harden/tasks/sysctl.yml
@@ -9,6 +9,7 @@
 - name: Protect against SYN floods
   ansible.builtin.shell: |
     echo "net.ipv4.tcp_syncookies=1" | sudo tee -a /etc/sysctl.conf > /dev/null
+    echo "net.ipv4.tcp_max_syn_backlog=1024" | sudo tee -a /etc/sysctl.conf > /dev/null
     echo "net.ipv4.tcp_synack_retries=2" | sudo tee -a /etc/sysctl.conf > /dev/null
     echo "net.ipv4.tcp_syn_retries=5" | sudo tee -a /etc/sysctl.conf > /dev/null
 
@@ -53,3 +54,10 @@
 - name: Log martian packets
   ansible.builtin.shell: |
     echo "net.ipv4.conf.all.log_martians=1" | sudo tee -a /etc/sysctl.conf > /dev/null
+
+# Disable IPv6
+- name: Disable IPv6
+  ansible.builtin.shell: |
+    echo "net.ipv6.conf.all.disable_ipv6=1" | sudo tee -a /etc/sysctl.conf > /dev/null
+    echo "net.ipv6.conf.default.disable_ipv6=1" | sudo tee -a /etc/sysctl.conf > /dev/null
+    echo "net.ipv6.conf.lo.disable_ipv6=1" | sudo tee -a /etc/sysctl.conf > /dev/null
