--- a/roles/harden/tasks/ufw.yml
+++ b/roles/harden/tasks/ufw.yml
@@ -11,7 +11,7 @@
   become: true
   ansible.builtin.shell: |
     ufw default deny incoming
-    ufw default deny outgoing
+    ufw default allow outgoing
     ufw allow 22/tcp
     ufw allow 80/tcp
     ufw allow 443/tcp
