--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,14 @@ PIHOLE_WEB_ADMIN_PASS="supersecretpassword"
 LOCALE="en_US.UTF-8"
 HOST_STATIC_ADDRESS="192.168.1.100"
 HOST_STATIC_ROUTER_ADDRESS="192.168.1.1"
+
+# Used for bootstrapping
+# # pulling the docker images and system setup
+BOOTSTRAP_NAME_SERVER="94.140.14.14"
+
+PIHOLE_IMAGE_VERSION="2022.07"
+DNSCRYPT_IMAGE_VERSION="latest"
+
 # comma-separated list of DNS servers to use for dnscrypt-proxy
 # https://dnscrypt.info/public-servers
 DNSCRYPT_SERVER_NAMES="'dnscrypt.pl'"
