Added configured versions for docker images to docker-compose file. Fixed an issue on some versions of raspbian where the dhcpcd name_server settings fail on first time setup by creating bootstrap and final dhcpcd.conf templates, so production uses the pihole itself as the name_server but not before it is setup and running.

--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOCALE="en_US.UTF-8"
 HOST_STATIC_ADDRESS="192.168.1.100"
 HOST_STATIC_ROUTER_ADDRESS="192.168.1.1"
 
-# Used for bootstrapping
-# # pulling the docker images and system setup
-BOOTSTRAP_NAME_SERVER="94.140.14.14"
+# DNS servers used for bootstrapping (space-separated)
+# # leave empty to default to system's DNS settings
+BOOTSTRAP_NAME_SERVERS="94.140.14.14 94.140.15.15"
 
 PIHOLE_IMAGE_VERSION="2022.07"
 DNSCRYPT_IMAGE_VERSION="latest"
