--- a/roles/bootstrap/tasks/main.yml
+++ b/roles/bootstrap/tasks/main.yml
@@ -1,5 +1,15 @@
 ---
 # tasks file for packages
+- name: Configure static name servers for bootstrapping (raspberry pi)
+  ansible.builtin.template:
+    src: templates/bootstrap-dhcpcd.conf.j2
+    dest: /etc/dhcpcd.conf
+    mode: "0664"
+  when:
+    - ansible_facts['os_family'] == "Debian"
+    - ansible_facts['nodename'] == "raspberrypi"
+    - lookup("env", "BOOTSTRAP_NAME_SERVERS") | length > 0
+
 - name: Run "apt-get update"
   ansible.builtin.apt:
     update_cache: yes
