Resolving issue with multiple bootstrap DNS servers and setting base resolvconf domain servers for raspberry pi systems.

--- a/.env.example
+++ b/.env.example
@@ -11,17 +11,19 @@ LOCALE="en_US.UTF-8"
 HOST_STATIC_ADDRESS="192.168.1.100"
 HOST_STATIC_ROUTER_ADDRESS="192.168.1.1"
 
-# DNS servers used for bootstrapping (space-separated)
+# DNS servers used for bootstrapping
 # # leave empty to default to system's DNS settings
-BOOTSTRAP_NAME_SERVERS="94.140.14.14 94.140.15.15"
+BOOTSTRAP_NAME_SERVERS="94.140.14.14"
 
 PIHOLE_IMAGE_VERSION="2022.07"
 DNSCRYPT_IMAGE_VERSION="latest"
 
 # comma-separated list of DNS servers to use for dnscrypt-proxy
+# # entries must be surroued by single-quotes '...'
 # https://dnscrypt.info/public-servers
 DNSCRYPT_SERVER_NAMES="'dnscrypt.pl'"
 
 # Anonymized DNS relays
+# # comma separated, entries must be surroued by single-quotes '...'
 # https://github.com/DNSCrypt/dnscrypt-proxy/wiki/Anonymized-DNS
 ANONYMIZED_DNS_RELAYS="'sdns://gRMxNzQuMTM4LjI5LjE3NToxNDQz'"
