--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ LOCALE="en_US.UTF-8"
 HOST_STATIC_ADDRESS="192.168.1.100"
 HOST_STATIC_ROUTER_ADDRESS="192.168.1.1"
 
+DISABLE_IPv6=false
+
 # DNS servers used for bootstrapping
 # # leave empty to default to system's DNS settings
 BOOTSTRAP_NAME_SERVERS="94.140.14.14"
