Fixed typo checking the wrong ENV vart for disabling IPv6.

--- a/roles/harden/tasks/sysctl.yml
+++ b/roles/harden/tasks/sysctl.yml
@@ -61,4 +61,4 @@
     echo "net.ipv6.conf.all.disable_ipv6=1" | sudo tee -a /etc/sysctl.conf > /dev/null
     echo "net.ipv6.conf.default.disable_ipv6=1" | sudo tee -a /etc/sysctl.conf > /dev/null
     echo "net.ipv6.conf.lo.disable_ipv6=1" | sudo tee -a /etc/sysctl.conf > /dev/null
-  when: lookup("env", "BOOTSTRAP_NAME_SERVERS") == "true"
+  when: lookup("env", "DISABLE_IPv6") == "true"
