--- a/roles/bootstrap/tasks/main.yml
+++ b/roles/bootstrap/tasks/main.yml
@@ -1,72 +1,33 @@
 ---
-# tasks file for packages
-# - name: Configure static name servers for bootstrapping (raspberry pi)
-#   ansible.builtin.template:
-#     src: templates/bootstrap-resolvconf.conf.j2
-#     dest: /etc/resolvconf.conf
-#     mode: "0664"
-#   when:
-#     - ansible_facts['os_family'] == "Debian"
-#     - ansible_facts['nodename'] == "raspberrypi"
-#     - lookup("env", "BOOTSTRAP_NAME_SERVERS") | length > 0
+# tasks file for bootstrapping Pi/DNS Services host
+# Linux raspberrypi 5.15.32-v7l+ #1538 SMP Thu Mar 31 19:39:41 BST 2022 armv7l GNU/Linux
+## [cloudflared-linux-arm] package architecture (arm) does not match system (armhf) !!!
 
-# - name: Update resolvconf
-#   become: true
-#   ansible.builtin.shell: sudo resolvconf -u
+# QUESTION
+# Instead, how about a fallback-DoT setup on UDMP?
+# Also mitigates broken Pi-DNS services by keeping ALL DNS still secure
+#   (prevent injection and poison attacks).
+
+- name: Primary host configuration
+  ansible.builtin.include_tasks: configure.yml
 
 - name: Run "apt-get update"
   ansible.builtin.apt:
     update_cache: yes
   ignore_errors: true
 
-- name: Set locale
-  become: true
-  ansible.builtin.shell: |
-    echo "en_US.UTF-8" >> /etc/locale.gen
-    locale-gen en_US.UTF-8
-    update-locale en_US.UTF-8
-
-# - name: Conditionally enable apt-transport-tor for sources.list.d/raspi.list
-#   ansible.builtin.template:
-#     src: templates/etc-apt/raspi.list.j2
-#     dest: /etc/apt/sources.list.d/raspi.list
-#     force: yes
-#   when: '{{ lookup("env", "APT_TRANSPORT_TOR_ENABLED") == "true" }}'
-
-# - name: Conditionally enable apt-transport-tor for sources.list
-#   ansible.builtin.template:
-#     src: templates/etc-apt/sources.list.j2
-#     dest: /etc/apt/sources.list
-#     force: yes
-#   when: '{{ lookup("env", "APT_TRANSPORT_TOR_ENABLED") == "true" }}'
-
-- name: Install system dependencies
-  ansible.builtin.apt:
-    pkg:
-      - python3
-      - python3-pip
-      - software-properties-common
-      - ca-certificates
-      - apt-transport-https
-      - curl
-      - gnupg
-      - lsb-release
-      - dnsutils
-      - raspberrypi-kernel
-      - raspberrypi-kernel-headers
-      - ufw
-      - fail2ban
-      # - apt-transport-tor
-
-- name: Upgrade SSH (if applicable)
-  ansible.builtin.apt:
-    pkg:
-      - ssh
+- name: Install openvpn for Bootstap VPN-Proxy
+  ansible.builtin.include_tasks: vpn-proxy.yml
+  when: lookup("env", "VPN_BOOTSTRAP_PROXY_ENABLED") == "true"
+  
+- name: Install core host pacakges
+  ansible.builtin.include_tasks: core-packages.yml
 
 - name: Remove unnecessary packages and run "apt-get clean"
   ansible.builtin.apt:
     autoclean: yes
     autoremove: yes
+
 # - name: Add SSH key from .env to authorized_keys on pihole
 #   ansible.builtin.shell: |
 #     cat {{ lookup("env", "SERVER_SSH_KEY_FILE") }}.pub | ssh {{ lookup("env", "PIHOLE_USER") }}@{{ lookup("env", "SERVER_IPv4_ADDRESS") }} "mkdir -p ~/.ssh && touch ~/.ssh/authorized_keys && chmod -R go= ~/.ssh && cat >> ~/.ssh/authorized_keys"
