Updating inventory and env example to clarify ssh key and ip address for use by hosting machine

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 TIMEZONE="America/Chicago"
-SERVER_IPv4_ADDRESS="192.168.1.53"
-SERVER_SSH_KEY_FILE="/home/crayons/.ssh/pihole"
+ANSIBLE_SSH_KEY_FILE="/home/crayons/.ssh/pihole"
 PIHOLE_USER="pi"
 PROJECT_WORKING_DIR="/opt/dns"
 DNSSEC_ENABLED=false
