--- a/inventory.yml
+++ b/inventory.yml
@@ -5,5 +5,5 @@ pihole:
     server:
       ansible_connection: ssh
       ansible_user: '{{ lookup("env", "PIHOLE_USER") }}'
-      ansible_host: '{{ lookup("env", "SERVER_IPv4_ADDRESS") }}'
-      ansible_ssh_private_key_file: '{{ lookup("env", "SERVER_SSH_KEY_FILE") }}'
+      ansible_host: '{{ lookup("env", "HOST_STATIC_ADDRESS") }}'
+      ansible_ssh_private_key_file: '{{ lookup("env", "ANSIBLE_SSH_KEY_FILE") }}'
